// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots List List 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <List
            color="currentColor"
            compact={false}
            leftAlign={false}
          >
            <ul
              className="List-sc-1cqkmnl-0 gxlfne"
              color="currentColor"
            >
              <ListItem
                color="currentColor"
                mb="8px"
              >
                <li
                  className="ListItem-qqenhw-0 jlnRPI"
                  color="currentColor"
                >
                  List Item 1
                </li>
              </ListItem>
              <ListItem
                color="currentColor"
                mb="8px"
              >
                <li
                  className="ListItem-qqenhw-0 jlnRPI"
                  color="currentColor"
                >
                  List Item 2 that is really really really really really really really really really long
                </li>
              </ListItem>
              <ListItem
                color="currentColor"
                mb="8px"
              >
                <li
                  className="ListItem-qqenhw-0 jlnRPI"
                  color="currentColor"
                >
                  List Item 3
                </li>
              </ListItem>
            </ul>
          </List>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots List With compact spacing 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <List
            color="currentColor"
            compact={true}
            leftAlign={false}
          >
            <ul
              className="List-sc-1cqkmnl-0 geydbK"
              color="currentColor"
            >
              <ListItem
                color="currentColor"
                mb="8px"
              >
                <li
                  className="ListItem-qqenhw-0 jlnRPI"
                  color="currentColor"
                >
                  List Item 1
                </li>
              </ListItem>
              <ListItem
                color="currentColor"
                mb="8px"
              >
                <li
                  className="ListItem-qqenhw-0 jlnRPI"
                  color="currentColor"
                >
                  List Item 2 that is really really really really really really really really really long
                </li>
              </ListItem>
              <ListItem
                color="currentColor"
                mb="8px"
              >
                <li
                  className="ListItem-qqenhw-0 jlnRPI"
                  color="currentColor"
                >
                  List Item 3
                </li>
              </ListItem>
            </ul>
          </List>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots List With custom colour 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <List
            color="red"
            compact={false}
            leftAlign={false}
          >
            <ul
              className="List-sc-1cqkmnl-0 bLubqG"
              color="red"
            >
              <ListItem
                color="currentColor"
                mb="8px"
              >
                <li
                  className="ListItem-qqenhw-0 jlnRPI"
                  color="currentColor"
                >
                  List Item 1
                </li>
              </ListItem>
              <ListItem
                color="currentColor"
                mb="8px"
              >
                <li
                  className="ListItem-qqenhw-0 jlnRPI"
                  color="currentColor"
                >
                  List Item 2 that is really really really really really really really really really long
                </li>
              </ListItem>
              <ListItem
                color="currentColor"
                mb="8px"
              >
                <li
                  className="ListItem-qqenhw-0 jlnRPI"
                  color="currentColor"
                >
                  List Item 3
                </li>
              </ListItem>
            </ul>
          </List>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots List With custom font size and line height 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <List
            color="currentColor"
            compact={false}
            fontSize="small"
            leftAlign={false}
            lineHeight="smallTextBase"
          >
            <ul
              className="List-sc-1cqkmnl-0 lmyvOo"
              color="currentColor"
              fontSize="small"
            >
              <ListItem
                color="currentColor"
                mb="8px"
              >
                <li
                  className="ListItem-qqenhw-0 jlnRPI"
                  color="currentColor"
                >
                  List Item 1
                </li>
              </ListItem>
              <ListItem
                color="currentColor"
                mb="8px"
              >
                <li
                  className="ListItem-qqenhw-0 jlnRPI"
                  color="currentColor"
                >
                  List Item 2 that is really really really really really really really really really long
                </li>
              </ListItem>
              <ListItem
                color="currentColor"
                mb="8px"
              >
                <li
                  className="ListItem-qqenhw-0 jlnRPI"
                  color="currentColor"
                >
                  List Item 3
                </li>
              </ListItem>
            </ul>
          </List>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots List With left alignment 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <List
            color="currentColor"
            compact={false}
            leftAlign={true}
          >
            <ul
              className="List-sc-1cqkmnl-0 jNbdHP"
              color="currentColor"
            >
              <ListItem
                color="currentColor"
                mb="8px"
              >
                <li
                  className="ListItem-qqenhw-0 jlnRPI"
                  color="currentColor"
                >
                  List Item 1
                </li>
              </ListItem>
              <ListItem
                color="currentColor"
                mb="8px"
              >
                <li
                  className="ListItem-qqenhw-0 jlnRPI"
                  color="currentColor"
                >
                  List Item 2 that is really really really really really really really really really long
                </li>
              </ListItem>
              <ListItem
                color="currentColor"
                mb="8px"
              >
                <li
                  className="ListItem-qqenhw-0 jlnRPI"
                  color="currentColor"
                >
                  List Item 3
                </li>
              </ListItem>
            </ul>
          </List>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;
